# wire

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
i18n/en-US/: err.ftl  main.ftl
i18n/hr-hr/: err.ftl  main.ftl
src/: error.rs  events.rs  i18n.rs  lib.rs  req.rs  res.rs  target.rs
wire-macros/: Cargo.toml
wire-macros/src/: lib.rs
