[package]
name = "wire"
edition = "2021"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wire-macros = { path = "wire-macros" }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
fluent-templates = { version = "0.10", optional = true }
uuid = { version = "1.10", default-features = false, features = ["v4", "serde"] }

[features]
# localization
i18n = ["dep:fluent-templates"]
# wasm
wasm = ["uuid/js"]
