[package]
name = "wire"
edition = "2021"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wire-macros = { path = "wire-macros" }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.10", default-features = false, features = ["v4", "serde"] }
chrono = "0.4"
# localization
i18n = { git = "https://github.com/Instant-Reactive-Systems/i18n.git", optional = true }

[features]
# localization
i18n = ["dep:i18n"]
# wasm
wasm = ["uuid/js"]
