[package]
name = "wire-macros"
description = "Utility procedural macros for wire"
edition = "2021"
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
# virtue = { version = "0.0.15", features = ["proc-macro"] }
